Trabajo Finalizado, Segunda Versión.

--- a/eventos.html
+++ b/eventos.html
@@ -1,14 +1,106 @@
-<main>
-  <section class="hero">
-    <h2>Próximos Eventos</h2>
-    <p>No te pierdas nuestras activaciones, ferias y descuentos en tienda.</p>
-  </section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Siman | Eventos</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
+        <header class="header">
+            <section class="img-container">
+                <a href="./index.html">
+                    <img href="./index.html" src="./assets/img/logo-siman.png" alt="logo-imagen-siman" class="img-logo">
+                </a>
+            </section>
+            <nav class="navbar">
+                <a href="./index.html" class="nav-item">Promociones</a>
+                <a href="./eventos.html" class="nav-item">Eventos</a>
+                <a href="./suscribete.html" class="nav-item">Suscríbete</a>
+            </nav>
+        </header>
+        
+        
+        <main class="main-container">
+            <section class="hero">
+                <h2 class="hero-title">PRÓXIMOS EVENTOS</h2>
+                <p class="hero-subtitle">No te pierdas nuestras activaciones, ferias y descuentos en tienda.</p>
+            </section>
 
-  <section class="promociones">
-    <article>
-      <img src="img/evento1.jpg" alt="Evento 1">
-      <h3>Black Friday 2025</h3>
-      <p>Ven y aprovecha precios increíbles.</p>
-    </article>
-  </section>
-</main>
+            <section class="categorias-container">
+                <!--CARD SECTION 1-->
+                <div class="card-section">
+                    <a href="./index.html">
+                        <img src="./assets/img/imagen-oferta-fatherday.jpg" alt="categoria-ropa-mujer" class="img-categoria">
+                    </a>
+                </div>
+
+                <!--CARD SECTION 2-->
+                <div class="card-section-double">
+                    <div class="card">
+                        <a href="./index.html">
+                            <img src="./assets/img/imagen-black-firday.jpg" alt="categoria-ropa-ninios" class="img-categoria-double">
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="./index.html">
+                            <img src="./assets/img/imagen-oferta-verano2.jpg" alt="categoria-ropa-deportiva" class="img-categoria-double">
+                        </a>
+                    </div>
+                </div>
+
+                <!--CARD SECTION 3-->
+                <div class="card-section">
+                    <a href="./index.html">
+                        <img src="./assets/img/imagen-oferta-fin-de-anio.jpg" alt="categoria-ropa-hombre" class="img-categoria">
+                    </a>
+                </div>
+            </section>
+            <!--
+            <section class="promociones">
+                <article>
+                <img src="img/evento1.jpg" alt="Evento 1">
+                <h3>Black Friday 2025</h3>
+                <p>Ven y aprovecha precios increíbles.</p>
+                </article>
+            </section>
+            -->
+        </main>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <img src="./assets/img/almacenes-siman-empleos.png" class="img-logo" alt="logo-imagen-siman">
+                </div>
+                <div class="footer-social">
+                    <a href="#" class="social-icon">
+                        <img src="./assets/icons/facebook-svgrepo-com.svg" class="icon" alt="facebook-icon-logo"></img>
+                    </a>
+                    <a href="#" class="social-icon">
+                        <img src="./assets/icons/twitter-svgrepo-com.svg" class="icon" alt="twitter-icon-logo">
+                    </a>
+                    <a href="#" class="social-icon">
+                        <img src="./assets/icons/whatsapp-svgrepo-com.svg" class="icon" alt="whatsapp-icon-logo">
+                    </a>
+                    <a href="#" class="social-icon">
+                        <img src="./assets/icons/instagram-svgrepo-com.svg" class="icon" alt="instagram-icon-logo">
+                    </a>
+                </div>
+                <div class="footer-links">
+                    <a href="#">Inicio</a>
+                    <a href="#">Servicios</a>
+                    <a href="#">Contacto</a>
+                    <a href="#">Política de Privacidad</a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 SIMAN ES. Todos los derechos reservados.</p>
+            </div>
+        </footer>
+    </div>
+</body>
+</html>
