Cambio al Index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <p class="card-text">Some quick example.</p>
                     </div>
                     <div class="card-body">
-                        <a href="#" class="btn btn-danger">Comprar</a>
+                        <a href="#" class="btn btn-danger">Agregar al Carrito</a>
                     </div>
                 </div>
                 <div class="card">
@@ -47,7 +47,7 @@
                         <p class="card-text">Some quick example.</p>
                     </div>
                     <div class="card-body">
-                        <a href="#" class="btn btn-danger">Comprar</a>
+                        <a href="#" class="btn btn-danger">Agregar al Carrito</a>
                     </div>
                 </div>
                 <div class="card">
@@ -57,7 +57,7 @@
                         <p class="card-text">Some quick example.</p>
                     </div>
                     <div class="card-body">
-                        <a href="#" class="btn btn-danger">Comprar</a>
+                        <a href="#" class="btn btn-danger">Agregar al Carrito</a>
                     </div>
                 </div>
                 <div class="card">
@@ -67,7 +67,7 @@
                         <p class="card-text">Some quick example.</p>
                     </div>
                     <div class="card-body">
-                        <a href="#" class="btn btn-danger">Comprar</a>
+                        <a href="#" class="btn btn-danger">Agregar al Carrito</a>
                     </div>
                 </div>
                 <div class="card">
@@ -77,7 +77,7 @@
                         <p class="card-text">Some quick example.</p>
                     </div>
                     <div class="card-body">
-                        <a href="#" class="btn btn-danger">Comprar</a>
+                        <a href="#" class="btn btn-danger">Agregar al Carrito</a>
                     </div>
                 </div>
             </section>
